fix align items

--- a/src/css/success-stories.css
+++ b/src/css/success-stories.css
@@ -130,7 +130,7 @@
 .slider-controls {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     margin-top: 32px;
 }
 
